RoN_CDB: Uprev to 2.0

--- a/ReadyOrNot-CustomizationDataBase.uplugin
+++ b/ReadyOrNot-CustomizationDataBase.uplugin
@@ -1,15 +1,15 @@
 {
 	"FileVersion": 3,
-	"Version": 1,
-	"VersionName": "1.0",
+	"Version": 2,
+	"VersionName": "2.0",
 	"FriendlyName": "ReadyOrNot-CustomizationDataBase",
-	"Description": "A simple plugin that adds CustomizationDataBase classes to UE4 Editor to create Blueprints of player customization items for ReadyOrNot game.",
+	"Description": "Extension for ReadyOrNot Customization items",
 	"Category": "Tools",
 	"CreatedBy": "beykerykt",
 	"CreatedByURL": "https://github.com/beykerykt/",
 	"DocsURL": "",
 	"MarketplaceURL": "",
-	"SupportURL": "https://github.com/beykerykt/UE4-ReadyOrNot-CustomizationDataBase/",
+	"SupportURL": "https://github.com/beykerykt/ReadyOrNot-CustomizationDataBase/",
 	"CanContainContent": false,
 	"IsBetaVersion": true,
 	"IsExperimentalVersion": false,
